# winrmexec

./: pyproject.toml
src/winrmexec/: __init__.py  evil.py  main.py
src/winrmexec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
